AX ITM: AXIsolatedTree::updateNode doesn't update if the target node is a descendant of a barren object. https://bugs.webkit.org/show_bug.cgi?id=241915

Reviewed by Chris Fleizach.

AXIsolatedTree::updateNode doesn't update the target node if it is ignored, in particular if it is a descendant of a barren object like a button. With this patch, when the given node is a descendant of a barren object, we update its unignored parent.

* LayoutTests/accessibility/button-title-change-expected.txt: Added.
* LayoutTests/accessibility/button-title-change.html: Added.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleTextChanged):
(WebCore::AXObjectCache::handleAttributeChange):
(WebCore::AXObjectCache::performDeferredCacheUpdate):
(WebCore::AXObjectCache::deferTextChangedIfNeeded):
(WebCore::AXObjectCache::treeData):
(WebCore::AXObjectCache::textChanged): Became handleTextChanged.
* Source/WebCore/accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::handleTextChanged):
(WebCore::AXObjectCache::textChanged): Deleted.
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::setIsIgnoredFromParentDataForChild):
* Source/WebCore/accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::isDescendantOfBarrenParent const):
Removed from the AXCoreObject interface and made it a virtual method of this class.
* Source/WebCore/accessibility/AccessibilityObjectInterface.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::isDescendantOfBarrenParent const): Deleted.
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateNode):

Canonical link: https://commits.webkit.org/251817@main